objects/Metadata_Driven_Trigger__mdt.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Order__c</fullName>
        <label>Execution Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Metadata_Driven_Triggerss</relationshipLabel>
        <relationshipName>Metadata_Driven_Triggerss</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Metadata Driven Trigger</label>
    <pluralLabel>Metadata Driven Triggerss</pluralLabel>
</CustomObject>